--- a/src/main/resources/templates/areaPeriod/add.html
+++ b/src/main/resources/templates/areaPeriod/add.html
@@ -10,7 +10,7 @@
         <table>
             <tr>
                 <th><label for="scheduleStart">Fecha de inicio</label></th>
-                <td><input type="date" id="scheduleStart" th:field="*{scheduleStart}"></td>
+                <td><input required="required" type="date" id="scheduleStart" th:field="*{scheduleStart}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('scheduleStart')}">
                 <td colspan="2">
@@ -28,7 +28,7 @@
             </tr>
             <tr>
                 <th><label for="periodStart">Hora de inicio</label></th>
-                <td><input type="time" id="periodStart" th:field="*{periodStart}"></td>
+                <td><input required="required" type="time" id="periodStart" th:field="*{periodStart}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('periodStart')}">
                 <td colspan="2">
@@ -37,7 +37,7 @@
             </tr>
             <tr>
                 <th><label for="periodEnd">Hora de fin</label></th>
-                <td><input type="time" id="periodEnd" th:field="*{periodEnd}"></td>
+                <td><input required="required" type="time" id="periodEnd" th:field="*{periodEnd}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('periodEnd')}">
                 <td colspan="2">
@@ -45,6 +45,6 @@
                 </td>
             </tr>
         </table>
-        <input type="submit" value="Añadir" class="btn btn-success"/>Añadir horario</td>
+        <input type="submit" value="Añadir" class="btn btn-success"/>
     </form>
 </main>
