--- a/src/main/resources/templates/service/update.html
+++ b/src/main/resources/templates/service/update.html
@@ -6,11 +6,10 @@
 <main layout:fragment="content">
     <form onsubmit="return confirm('¿Seguro que desea actualizar los datos y los datos son correctos?')"
             th:object="${object}" method="post">
-        <td><input type="hidden" id="area" th:field="*{area}"></td>
         <table>
             <tr>
                 <th><label for="serviceType">Tipo de servicio</label></th>
-                <td><select type="number" id="serviceType" th:field="*{serviceType}">
+                <td><select required="required" type="number" id="serviceType" th:field="*{serviceType}">
                     <option th:each="type : ${data.types}" th:value="*{type.key}" th:text="*{type.value}"></option>
                 </select>
                 </td>
@@ -22,7 +21,7 @@
             </tr>
             <tr>
                 <th><label for="scheduleStart">Fecha de inicio</label></th>
-                <td><input type="date" id="scheduleStart" th:field="*{scheduleStart}"></td>
+                <td><input required="required" type="date" id="scheduleStart" th:field="*{scheduleStart}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('scheduleStart')}">
                 <td colspan="2">
@@ -31,7 +30,7 @@
             </tr>
             <tr>
                 <th><label for="scheduleEnd">Fecha de fin</label></th>
-                <td><input type="date" id="scheduleEnd" th:field="*{scheduleEnd}"></td>
+                <td><input required="required" type="date" id="scheduleEnd" th:field="*{scheduleEnd}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('scheduleEnd')}">
                 <td colspan="2">
@@ -40,7 +39,7 @@
             </tr>
             <tr>
                 <th><label for="periodStart">Hora de inicio</label></th>
-                <td><input type="time" id="periodStart" th:field="*{periodStart}"></td>
+                <td><input required="required" type="time" id="periodStart" th:field="*{periodStart}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('periodStart')}">
                 <td colspan="2">
@@ -49,7 +48,7 @@
             </tr>
             <tr>
                 <th><label for="periodEnd">Hora de fin</label></th>
-                <td><input type="time" id="periodEnd" th:field="*{periodEnd}"></td>
+                <td><input required="required" type="time" id="periodEnd" th:field="*{periodEnd}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('periodEnd')}">
                 <td colspan="2">
@@ -58,6 +57,6 @@
             </tr>
         </table>
         <input type="submit"
-               value="Actualizar" class="btn btn-success"/>Actualizar servicio</td>
+               value="Actualizar" class="btn btn-success"/>
     </form>
 </main>
