--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -7,7 +7,7 @@
         <table>
             <tr>
                 <th><label for="identification">Identificación:</label></th>
-                <td><input type="text" id="identification" th:field="*{identification}"/></td>
+                <td><input required="required"type="text" id="identification" th:field="*{identification}"/></td>
             </tr>
             <tr th:each="err : ${#fields.errors('identification')}">
                 <td colspan="2">
@@ -16,7 +16,7 @@
             </tr>
             <tr>
                 <th><label for="password">Contraseña:</label></th>
-                <td><input type="password" id="password" th:field="*{password}"/></td>
+                <td><input required="required"type="password" id="password" th:field="*{password}"/></td>
             </tr>
             <tr th:each="err : ${#fields.errors('password')}">
                 <td colspan="2">
