--- a/src/main/resources/templates/area/add.html
+++ b/src/main/resources/templates/area/add.html
@@ -9,7 +9,7 @@
         <table>
             <tr>
                 <th><label for="name">Nombre</label></th>
-                <td><input type="text" id="name" th:field="*{name}"></td>
+                <td><input required="required" type="text" id="name" th:field="*{name}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('name')}">
                 <td colspan="2">
@@ -19,7 +19,7 @@
             <tr>
                 <th><label for="type">Tipo</label></th>
                 <td>
-                    <select type="number" id="type" th:field="*{type}">
+                    <select required="required" type="number" id="type" th:field="*{type}">
                         <option th:each="type : ${T(app.model.enums.AreaType).values()}" th:value="${type}"
                                 th:text="${type.name}"></option>
                     </select>
@@ -32,7 +32,7 @@
             </tr>
             <tr>
                 <th><label for="description">Descripción</label></th>
-                <td><input type="number" id="description" th:field="*{description}"></td>
+                <td><input required="required" type="number" id="description" th:field="*{description}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('description')}">
                 <td colspan="2">
@@ -41,7 +41,7 @@
             </tr>
             <tr>
                 <th><label for="location">Coordenadas</label></th>
-                <td><input type="text" pattern="" id="location" th:field="*{location}"></td>
+                <td><input required="required" type="text" pattern="" id="location" th:field="*{location}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('location')}">
                 <td colspan="2">
@@ -50,7 +50,7 @@
             </tr>
             <tr>
                 <th><label for="image">URL de la imágen</label></th>
-                <td><input type="url" id="image" th:field="*{image}"></td>
+                <td><input required="required" type="url" id="image" th:field="*{image}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('image')}">
                 <td colspan="2">
@@ -58,6 +58,6 @@
                 </td>
             </tr>
         </table>
-        <input type="submit" value="Añadir" class="btn btn-success"/>Añadir Área</td>
+        <input type="submit" value="Añadir" class="btn btn-success"/>
     </form>
 </main>
