--- a/src/main/resources/templates/citizen/add.html
+++ b/src/main/resources/templates/citizen/add.html
@@ -9,7 +9,7 @@
         <table>
             <tr>
                 <th><label for="identification">Identificación</label></th>
-                <td><input type="text" id="identification" th:field="*{identification}"></td>
+                <td><input required="required" type="text" id="identification" th:field="*{identification}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('identification')}">
                 <td colspan="2">
@@ -18,7 +18,7 @@
             </tr>
             <tr>
                 <th><label for="name">Nombre</label></th>
-                <td><input type="text" id="name" th:field="*{name}"></td>
+                <td><input required="required" type="text" id="name" th:field="*{name}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('name')}">
                 <td colspan="2">
@@ -27,7 +27,7 @@
             </tr>
             <tr>
                 <th><label for="mail">Correo Electrónico</label></th>
-                <td><input type="text" id="mail" th:field="*{mail}"></td>
+                <td><input required="required" type="email" id="mail" th:field="*{mail}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('mail')}">
                 <td colspan="2">
@@ -36,7 +36,7 @@
             </tr>
             <tr>
                 <th><label for="password">Contraseña</label></th>
-                <td><input type="text" id="password" th:field="*{password}"></td>
+                <td><input required="required" type="password" id="password" th:field="*{password}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('password')}">
                 <td colspan="2">
@@ -45,8 +45,8 @@
             </tr>
             <th><label for="country">País</label></th>
             <td>
-                <select type="number" id="country" th:field="*{country}">
-                    <option th:each="type : ${T(app.model.enums.Country.values()}" th:value="${country}"
+                <select required="required" type="number" id="country" th:field="*{country}">
+                    <option th:each="country : ${T(app.model.enums.Country).values()}" th:value="${country}"
                             th:text="${country.name}"></option>
                 </select>
             </td>
@@ -57,7 +57,7 @@
             </tr>
             <tr>
                 <th><label for="city">Ciudad</label></th>
-                <td><input type="text" id="city" th:field="*{city}"></td>
+                <td><input required="required" type="text" id="city" th:field="*{city}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('city')}">
                 <td colspan="2">
@@ -66,7 +66,7 @@
             </tr>
             <tr>
                 <th><label for="address">Dirección</label></th>
-                <td><input type="text" id="address" th:field="*{address}"></td>
+                <td><input required="required" type="text" id="address" th:field="*{address}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('address')}">
                 <td colspan="2">
@@ -74,7 +74,6 @@
                 </td>
             </tr>
         </table>
-        <input type="submit" value="Dar de alta" class="btn btn-success"
-        /></td>
+        <input type="submit" value="Dar de alta" class="btn btn-success"/>
     </form>
 </main>
