--- a/src/main/resources/templates/citizen/update.html
+++ b/src/main/resources/templates/citizen/update.html
@@ -8,7 +8,7 @@
         <table>
             <tr>
                 <th><label for="identification">Identificación</label></th>
-                <td><input type="text" id="identification" th:field="*{identification}"></td>
+                <td><input required="required" type="text" id="identification" th:field="*{identification}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('identification')}">
                 <td colspan="2">
@@ -17,7 +17,7 @@
             </tr>
             <tr>
                 <th><label for="name">Nombre</label></th>
-                <td><input type="text" id="name" th:field="*{name}"></td>
+                <td><input required="required" type="text" id="name" th:field="*{name}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('name')}">
                 <td colspan="2">
@@ -26,7 +26,7 @@
             </tr>
             <tr>
                 <th><label for="mail">Correo Electrónico</label></th>
-                <td><input type="text" id="mail" th:field="*{mail}"></td>
+                <td><input required="required" type="email" id="mail" th:field="*{mail}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('mail')}">
                 <td colspan="2">
@@ -35,7 +35,7 @@
             </tr>
             <tr>
                 <th><label for="password">Contraseña</label></th>
-                <td><input type="text" id="password" th:field="*{password}"></td>
+                <td><input type="password" placeholder="Mantener la misma" id="password" th:field="*{password}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('password')}">
                 <td colspan="2">
@@ -44,8 +44,8 @@
             </tr>
             <th><label for="country">País</label></th>
             <td>
-                <select type="number" id="country" th:field="*{country}">
-                    <option th:each="type : ${T(app.model.enums.Country.values()}" th:value="${country}"
+                <select required="required" type="number" id="country" th:field="*{country}">
+                    <option th:each="country : ${T(app.model.enums.Country).values()}" th:value="${country}"
                             th:text="${country.name}"></option>
                 </select>
             </td>
@@ -56,7 +56,7 @@
             </tr>
             <tr>
                 <th><label for="city">Ciudad</label></th>
-                <td><input type="text" id="city" th:field="*{city}"></td>
+                <td><input required="required" type="text" id="city" th:field="*{city}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('city')}">
                 <td colspan="2">
@@ -65,7 +65,7 @@
             </tr>
             <tr>
                 <th><label for="address">Dirección</label></th>
-                <td><input type="text" id="address" th:field="*{address}"></td>
+                <td><input required="required" type="text" id="address" th:field="*{address}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('address')}">
                 <td colspan="2">
@@ -73,8 +73,6 @@
                 </td>
             </tr>
         </table>
-        <input
-               type="submit" value="Actualizar" class="btn btn-warning"
-        /></td>
+        <input type="submit" value="Actualizar" class="btn btn-warning"/>
     </form>
 </main>
