--- a/src/main/resources/templates/controlStaff/add.html
+++ b/src/main/resources/templates/controlStaff/add.html
@@ -9,7 +9,7 @@
         <table>
             <tr>
                 <th><label for="identification">Identificación</label></th>
-                <td><input type="text" id="identification" th:field="*{identification}"></td>
+                <td><input required="required" type="text" id="identification" th:field="*{identification}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('identification')}">
                 <td colspan="2">
@@ -18,7 +18,7 @@
             </tr>
             <tr>
                 <th><label for="name">Nombre</label></th>
-                <td><input type="text" id="name" th:field="*{name}"></td>
+                <td><input required="required" type="text" id="name" th:field="*{name}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('name')}">
                 <td colspan="2">
@@ -27,7 +27,7 @@
             </tr>
             <tr>
                 <th><label for="mail">Correo Electrónico</label></th>
-                <td><input type="text" id="mail" th:field="*{mail}"></td>
+                <td><input required="required" type="email" id="mail" th:field="*{mail}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('mail')}">
                 <td colspan="2">
@@ -36,7 +36,7 @@
             </tr>
             <tr>
                 <th><label for="password">Contraseña</label></th>
-                <td><input type="text" id="password" th:field="*{password}"></td>
+                <td><input required="required" type="password" id="password" th:field="*{password}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('password')}">
                 <td colspan="2">
