--- a/src/main/resources/templates/municipalManager/update.html
+++ b/src/main/resources/templates/municipalManager/update.html
@@ -8,7 +8,7 @@
         <table>
             <tr>
                 <th><label for="identification">Identificación</label></th>
-                <td><input type="text" id="identification" th:field="*{identification}"></td>
+                <td><input required="required" type="text" id="identification" th:field="*{identification}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('identification')}">
                 <td colspan="2">
@@ -17,7 +17,7 @@
             </tr>
             <tr>
                 <th><label for="name">Nombre</label></th>
-                <td><input type="text" id="name" th:field="*{name}"></td>
+                <td><input required="required" type="text" id="name" th:field="*{name}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('name')}">
                 <td colspan="2">
@@ -26,7 +26,7 @@
             </tr>
             <tr>
                 <th><label for="mail">Correo Electrónico</label></th>
-                <td><input type="text" id="mail" th:field="*{mail}"></td>
+                <td><input required="required" type="email" id="mail" th:field="*{mail}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('mail')}">
                 <td colspan="2">
@@ -35,7 +35,7 @@
             </tr>
             <tr>
                 <th><label for="password">Contraseña</label></th>
-                <td><input type="text" id="password" th:field="*{password}"></td>
+                <td><input type="password" placeholder="Mantener la misma" id="password" th:field="*{password}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('password')}">
                 <td colspan="2">
@@ -44,7 +44,7 @@
             </tr>
             <tr>
                 <th><label for="phone">Teléfono</label></th>
-                <td><input type="text" id="phone" th:field="*{phone}"></td>
+                <td><input required="required" type="text" id="phone" th:field="*{phone}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('phone')}">
                 <td colspan="2">
@@ -52,6 +52,6 @@
                 </td>
             </tr>
         </table>
-        <input type="submit" value="Actualizar" class="btn btn-warning"/></td>
+        <input type="submit" value="Actualizar" class="btn btn-warning"/>
     </form>
 </main>
