--- a/src/main/resources/templates/zone/add.html
+++ b/src/main/resources/templates/zone/add.html
@@ -10,7 +10,7 @@
         <table>
             <tr>
                 <th><label for="name">Nombre</label></th>
-                <td><input type="text" id="name" th:field="*{name}"></td>
+                <td><input required="required" type="text" id="name" th:field="*{name}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('name')}">
                 <td colspan="2">
@@ -19,7 +19,7 @@
             </tr>
             <tr>
                 <th><label for="capacity">Capacidad</label></th>
-                <td><input type="text" id="capacity" th:field="*{capacity}"></td>
+                <td><input required="required" type="text" id="capacity" th:field="*{capacity}"></td>
             </tr>
             <tr th:each="err : ${#fields.errors('capacity')}">
                 <td colspan="2">
@@ -27,6 +27,6 @@
                 </td>
             </tr>
         </table>
-        <input type="submit" value="Añadir" class="btn btn-success"/>Añadir zona</td>
+        <input type="submit" value="Añadir" class="btn btn-success"/>
     </form>
 </main>
