--- a/src/main/resources/templates/municipality/list.html
+++ b/src/main/resources/templates/municipality/list.html
@@ -23,8 +23,8 @@
             <td th:text="*{object.name}"></td>
             <td th:text="*{object.toSignString}" th:if="${session.user instanceof T(app.model.EnviromentalManager)}"></td>
             <td>
-                <a th:href="@{/area/list/{id}(id=${object.id})}" class="btn btn-success" role="button">Ver areas</a>
-                <a th:if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == object.id and object.active}"
+                <a th:if="${session.user instanceof T(app.model.Citizen) or session.user == null}" th:href="@{/area/list/{id}(id=${object.id})}" class="btn btn-success" role="button">Ver areas</a>
+                <a th:if="${session.user instanceof T(app.model.MunicipalManager)}"
                    th:href="@{/municipality/update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar
                 </a>
                 <a th:if="${session.user instanceof T(app.model.EnviromentalManager) and object.active}"
