--- a/src/main/resources/templates/controlStaff/update.html
+++ b/src/main/resources/templates/controlStaff/update.html
@@ -44,7 +44,7 @@
             </tr>
         </table>
         <input
-               type="submit" value="Actualizar" class="btn btn-success"
+               type="submit" value="Actualizar" class="btn btn-warning"
         /></td>
     </form>
 </main>
