--- a/src/main/resources/templates/area/update.html
+++ b/src/main/resources/templates/area/update.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{fragments/base}">
-<span layout:fragment="title" th:text="'Actualizar area de ' + ${data[0].municipality.name}"></span>
+<span layout:fragment="title" th:text="'Actualizar area de ' + ${data.municipality.name}"></span>
 <main layout:fragment="content">
     <form onsubmit="return confirm('¿Seguro que desea actualizar el area y los datos son correctos?')"
             th:object="${object}" method="post">
@@ -18,7 +18,7 @@
             <tr>
                 <th><label for="type">Tipo</label></th>
                 <td>
-                    <select required="required" type="number" id="type" th:field="*{type}">
+                    <select required="required" id="type" th:field="*{type}">
                         <option th:each="type : ${T(app.model.enums.AreaType).values()}" th:value="${type}"
                                 th:text="${type.name}"></option>
                     </select>
