--- a/src/main/resources/templates/citizen/update.html
+++ b/src/main/resources/templates/citizen/update.html
@@ -44,7 +44,7 @@
             </tr>
             <th><label for="country">País</label></th>
             <td>
-                <select required="required" type="number" id="country" th:field="*{country}">
+                <select required="required" id="country" th:field="*{country}">
                     <option th:each="country : ${T(app.model.enums.Country).values()}" th:value="${country}"
                             th:text="${country.name}"></option>
                 </select>
