--- a/src/main/resources/templates/service/list.html
+++ b/src/main/resources/templates/service/list.html
@@ -7,10 +7,9 @@
     <table class="table table-striped">
         <thead>
         <tr>
-            <th>Fechas de inicio</th>
-            <th>Fechas de fin</th>
-            <th>Hora de inicio</th>
-            <th>Hora de fin</th>
+            <th>Tipo</th>
+            <th>Fechas</th>
+            <th>Horario</th>
             <th>
                 <a th:if="${session.user instanceof T(app.model.MunicipalManager)}"
                    th:href="@{/service/add/{id}(id=${data[0].area.id})}" class="btn btn-success"
@@ -23,14 +22,13 @@
             <td colspan="5">No hay ningún servicio registrado </td>
         </tr>
         <tr th:each="object: ${object}">
+            <td th:text="*{data[objectStat.index].serviceType.name}"></td>
             <td th:text="*{object.toScheduleString}"></td>
-            <td th:text="*{object.toScheduleString}"></td>
-            <td th:text="*{object.toPeriodString}"></td>
             <td th:text="*{object.toPeriodString}"></td>
             <td>
-                <a th:if="${session.user instanceof T(app.model.MunicipalManager) and object.active}"
+                <a th:if="${session.user instanceof T(app.model.MunicipalManager) and object.updateable}"
                    th:href="@{/service/update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar</a>
-                <a th:if="${session.user instanceof T(app.model.MunicipalManager) and object.active}"
+                <a th:if="${session.user instanceof T(app.model.MunicipalManager) and object.updateable}"
                    th:href="@{/service/delete/{id}(id=${object.id})}"
                    onclick="return confirm('¿Seguro que desea eliminar el servicio?')"
                    class="btn btn-danger" role="button">Eliminar servicio</a>
