--- a/src/main/resources/templates/service/add.html
+++ b/src/main/resources/templates/service/add.html
@@ -57,6 +57,7 @@
                 </td>
             </tr>
         </table>
+        <a th:href="${data.mail}" target="_blank" class="btn btn-info">Solicitar nuevo tipo</a>
         <input type="submit" value="Añadir" class="btn btn-success"/>
     </form>
 </main>
