--- a/src/main/resources/templates/service/update.html
+++ b/src/main/resources/templates/service/update.html
@@ -56,7 +56,7 @@
                 </td>
             </tr>
         </table>
-        <input type="submit"
-               value="Actualizar" class="btn btn-warning"/>
+        <a th:href="${data.mail}" target="_blank" class="btn btn-info">Solicitar nuevo tipo</a>
+        <input type="submit" value="Actualizar" class="btn btn-warning"/>
     </form>
 </main>
